--- a/proj.html
+++ b/proj.html
@@ -410,48 +410,48 @@
                 <div id="vt2s1" class="msprojtitl">Come inside Room 101</div>
                 <div class="proj_tplaygrnd2">
                     <div class="proj_tfence2">
-                        <div class="proj_tbox1c">
-                        <div class="proj_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
+                        <a class="proj_tbox1c" href="nuances_proj.html" target="_self">
+                        <div class="proj_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/1.nuances.inessobral.jpg)"></div>
                             <div class="proj_ttitl">Nuances</div>
-                            <div class="proj_ttxt">Inês Sobral</div>
-                        </div>
-                        <div class="proj_tbox1d">
-                        <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
+                            <div class="proj_ttxt">Vídeo Fotográfico</div>
+                        </a>
+                        <a class="proj_tbox1d" href="lipotimia_proj.html" target="_self">
+                        <div class="proj_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/2.lipotimia.carolinacouto.jpg)"></div>
                             <div class="proj_ttitl">Lipotimia</div>
-                            <div class="proj_ttxt">Carolina Couto</div>
-                        </div>
-                        <div class="proj_tbox2b">
-                        <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
-                            <div class="proj_ttitl"> Illusion within an illusion</div>
-                            <div class="proj_ttxt">Beatriz Sapata</div>
-                        </div>
-                        <div class="proj_tbox1a">
-                        <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
+                            <div class="proj_ttxt">Vídeo Fotográfico</div>
+                        </a>
+                        <a class="proj_tbox2b" href="iwillusion_proj.html" target="_self">
+                        <div class="proj_timg2" style="background-image: url(css/img/psqv/1.comeinsideroom101/3.illusion.beatrizsapata.jpg)"></div>
+                            <div class="proj_ttitl">Illusion within an illusion</div>
+                            <div class="proj_ttxt">Vídeo Fotográfico</div>
+                        </a>
+                        <a class="proj_tbox1a" href="real_proj.html" target="_self">
+                        <div class="proj_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/4.real.abelsara.jpg)"></div>
                             <div class="proj_ttitl">Real?</div>
-                            <div class="proj_ttxt">Abel Quental<br>Sara Jorge</div>
-                        </div>
-                        <div class="proj_tbox1b">
-                        <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
+                            <div class="proj_ttxt">Video Fotográfico</div>
+                        </a>
+                        <a class="proj_tbox1b" href="azul_proj.html" target="_self">
+                        <div class="proj_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/5.azul.leonorlourenco.jpg)"></div>
                             <div class="proj_ttitl">Azul</div>
-                            <div class="proj_ttxt">Leonor Carvalho<br>Lourenço Stewart</div>
-                        </div>
-                        <div class="proj_tbox2e">
-                        <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
+                            <div class="proj_ttxt">Video Fotográfico</div>
+                        </a>
+                        <a class="proj_tbox2e" href="insider_proj.html" target="_self">
+                        <div class="proj_timg2" style="background-image: url(css/img/psqv/1.comeinsideroom101/6.insider.mafaldacintra.jpg)"></div>
                             <div class="proj_ttitl">Insider</div>
-                            <div class="proj_ttxt">Mafalda Cintra</div>
-                        </div>
+                            <div class="proj_ttxt">Video Fotográfico</div>
+                        </a>
                     </div>
                     <div class="proj_tfence2">
-                        <div class="proj_tbox2a">
-                        <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
+                        <a class="proj_tbox2a" href="tressmemo_proj.html" target="_self">
+                        <div class="proj_timg2" style="background-image: url(css/img/psqv/1.comeinsideroom101/7.tressuspiros.martaantunes.jpg)"></div>
                             <div class="proj_ttitl">Três Suspiros para uma Memória</div>
-                            <div class="proj_ttxt">Marta Antunes</div>
-                        </div>
-                        <div class="proj_tbox1e">
-                        <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
+                            <div class="proj_ttxt">Video Fotográfico</div>
+                        </a>
+                        <a class="proj_tbox1e" href="efectsec_proj.html" target="_self">
+                        <div class="proj_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/8.efeitosecundario.rodrigo.jpg)"></div>
                             <div class="proj_ttitl">Efeito secundário</div>
-                            <div class="proj_ttxt">Rodrigo Paixão</div>
-                        </div>
+                            <div class="proj_ttxt">Video Fotográfico</div>
+                        </a>
                         <div class="proj_tbox2d">
                         <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
                             <div class="proj_ttitl">Palácio Mental</div>
