--- a/azul_proj.html
+++ b/azul_proj.html
@@ -4,9 +4,29 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/home.css">
-        <link rel="stylesheet" href="css/profl.css">
-        <title>sem destino a - agenda</title>
+        <link rel="stylesheet" href="css/sprojs.css">
+        <title>sem destino a</title>
         <link rel="icon" href="css/img/sda_icon.png" type="image/x-icon">
+        <style>
+            .slideshow-container {
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 25px;
+	height: 0;
+}
+.slideshow-container iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+            @media only screen and (max-height: 420px){
+                .slideshow-container {
+	padding-bottom: 50%;
+}
+            }
+        </style>
     </head>
     <body>
         <script>
@@ -52,44 +72,24 @@
                 </div>
             </div>
         </div>
-        <div id="proflmain">
-            <div class="profl_sec">
-                <div class="profl_titl">Beatriz Sapata</div>
-                <div class="profl_links"><a class="profl_link" href="mailto:sapata.beatriz@gmail.com" target="_blank">sapata.beatriz@gmail.com</a><br><a class="profl_link" href="#" onclick='window.open("https://www.behance.net/beatrizsapata");return false;'>behance.net/beatrizsapata</a></div>
+        <div id="sprojmain">
+            <div class="sproj_titl">Azul</div>
+            <div class="sproj_hold">
+                <div class="sproj_stitl">Projecto de Design de Comnicação IV</div>
+                <div class="sproj_lhold"><a class="sproj_links" href="proj.html#desti2" target="_self">vamos</a> > <a class="sproj_links" href="proj.html#vt2" target="_self">Pelo sonho é que vamos</a> > <a class="sproj_links" href="proj.html#vt2s1" target="_self">Come inside Room 101</a></div>
             </div>
-            <div class="profl_tplaygrnd1">
-                    <div class="profl_tfence1">
-                        <a class="profl_tbox1a" href="explcont_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/totido/mbp/9.explicitcontent/capa.jpg)"></div>
-                            <div class="profl_ttitl">Explicit Content</div>
-                            <div class="profl_ttxt">Publicação Periódica</div>
-                        </a>
-                        <a class="profl_tbox1a" href="ichbeber_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/totido/gf/1.r1r2.beatrizsapata/r1/capa.jpg)"></div>
-                            <div class="profl_ttitl">Ich Bin Ein Berliner</div>
-                            <div class="profl_ttxt">Cartaz Desdobrável</div>
-                        </a>
-                    </div>
-                    <div class="profl_tfence1">
-                        <a class="profl_tbox2b" href="cryfrdm_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/totido/gf/1.r1r2.beatrizsapata/r2/capa.jpg)"></div>
-                            <div class="profl_ttitl">A Cry For Freedom</div>
-                            <div class="profl_ttxt">Cartazes</div>
-                        </a>
-                        <a class="profl_tbox1b" href="iwillusion_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/3.illusion.beatrizsapata.jpg)"></div>
-                            <div class="profl_ttitl">Illusion within an illusion</div>
-                            <div class="profl_ttxt">Video Fotográfico</div>
-                        </a>
-                    </div>
-                    <div class="profl_tfence1">
-                        <div class="profl_tbox2c">
-                        <div class="profl_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
-                    </div>
+            <div class="sproj_hold">
+                <div class="sproj_plhold">
+                    <a class="sproj_plinks" href="leocarvalho.html" target="_self">Leonor Carvalho</a>
+                    <a class="sproj_plinks" href="loustewart.html" target="_self">Lourenço Stewart</a>
                 </div>
+                <div class="sproj_intro">
+                    <div class="sproj_txt"><p>Azul é uma abordagem ao medo de não saber sentir e da perda da capacidade de sentir, que conduz a personagem a não distinguir a realidade da ilusão/alucinação. Através da presença de poucos indícios humanos, o objectivo é colocar o espectador no papel da personagem principal de modo a que possa criar as suas próprias interpretações, de acordo com as sensações para que as imagens lhe remetem.</p></div>
+                </div>
+            </div>
+            <div class="slideshow-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/mQycKZ6SUBA?rel=0" frameborder="0" allowfullscreen></iframe>
+            </div>
         </div>
         <div id="foot">
             <div id="footword">
