--- a/leocarvalho.html
+++ b/leocarvalho.html
@@ -76,11 +76,11 @@
                             <div class="profl_ttitl">Mother should I trust the Government?</div>
                             <div class="profl_ttxt">Cartaz Desdobrável</div>
                         </a>
-                        <div class="profl_tbox1b">
-                        <div class="profl_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
+                        <a class="profl_tbox1b" href="azul_proj.html" target="_self">
+                        <div class="profl_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/5.azul.leonorlourenco.jpg)"></div>
+                            <div class="profl_ttitl">Azul</div>
+                            <div class="profl_ttxt">Video Fotográfico</div>
+                        </a>
                     </div>
                     <div class="profl_tfence1">
                         <div class="profl_tbox2c">
