--- a/mafldcintra.html
+++ b/mafldcintra.html
@@ -76,11 +76,11 @@
                             <div class="profl_ttitl">Die Erste Lucke In Der Berliner Mauer</div>
                             <div class="profl_ttxt">Cartazes</div>
                         </a>
-                        <div class="profl_tbox1b">
-                        <div class="profl_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
+                        <a class="profl_tbox1b" href="insider_proj.html" target="_self">
+                        <div class="profl_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/6.insider.mafaldacintra.jpg)"></div>
+                            <div class="profl_ttitl">Insider</div>
+                            <div class="profl_ttxt">Video Fotográfico</div>
+                        </a>
                     </div>
                     <div class="profl_tfence1">
                         <div class="profl_tbox2c">
