--- a/martantunes.html
+++ b/martantunes.html
@@ -76,11 +76,11 @@
                             <div class="profl_ttitl">The War is Over</div>
                             <div class="profl_ttxt">Cartazes</div>
                         </a>
-                        <div class="profl_tbox1b">
-                        <div class="profl_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
+                        <a class="profl_tbox1b" href="tressmemo_proj.html" target="_self">
+                        <div class="profl_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/7.tressuspiros.martaantunes.jpg)"></div>
+                            <div class="profl_ttitl">Três Suspiros para uma Memória</div>
+                            <div class="profl_ttxt">Video Fotográfico</div>
+                        </a>
                     </div>
                     <div class="profl_tfence1">
                         <div class="profl_tbox2c">
