--- a/tressmemo_proj.html
+++ b/tressmemo_proj.html
@@ -9,12 +9,16 @@
         <link rel="icon" href="css/img/sda_icon.png" type="image/x-icon">
         <style>
             .slideshow-container {
+                display: table;
 	position: relative;
 	padding-bottom: 56.25%;
 	padding-top: 25px;
 	height: 0;
+                overflow: hidden;
 }
 .slideshow-container iframe {
+    display: flex;
+    display: -webkit-flex;
 	position: absolute;
 	top: 0;
 	left: 0;
