--- a/mafldmota.html
+++ b/mafldmota.html
@@ -76,11 +76,11 @@
                             <div class="profl_ttitl">The Eagle has landed</div>
                             <div class="profl_ttxt">Cartazes</div>
                         </a>
-                        <div class="profl_tbox1b">
-                        <div class="profl_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
+                        <a class="profl_tbox1b" href="triptic_proj.html" target="_self">
+                        <div class="profl_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/13.intala%C3%A7aoaudiovisual.mafaldapedrobeatriztiago.jpg)"></div>
+                            <div class="profl_ttitl">Tríptico</div>
+                            <div class="profl_ttxt">Instalação Audiovisual</div>
+                        </a>
                     </div>
                     <div class="profl_tfence1">
                         <div class="profl_tbox2c">
