--- a/proj.html
+++ b/proj.html
@@ -452,31 +452,31 @@
                             <div class="proj_ttitl">Efeito secundário</div>
                             <div class="proj_ttxt">Video Fotográfico</div>
                         </a>
-                        <div class="proj_tbox2d">
-                        <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
+                        <a class="proj_tbox2d" href="pmental_proj.html" target="_self">
+                        <div class="proj_timg2" style="background-image: url(css/img/psqv/1.comeinsideroom101/9.palaciomental.margarida.jpg)"></div>
                             <div class="proj_ttitl">Palácio Mental</div>
-                            <div class="proj_ttxt">Margarida Gomes da Silva</div>
-                        </div>
-                        <div class="proj_tbox1f">
-                        <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
-                            <div class="proj_ttitl">______</div>
-                            <div class="proj_ttxt">David Santos<br>Kevin Ferreira</div>
-                        </div>
-                        <div class="proj_tbox1a">
-                        <div class="proj_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
+                            <div class="proj_ttxt">Vídeo Fotográfico</div>
+                        </a>
+                        <a class="proj_tbox1f" href="suspiro_proj.html" target="_self">
+                        <div class="proj_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/10.regaudiovisual.davidkevin.jpg)"></div>
+                            <div class="proj_ttitl">suspiro</div>
+                            <div class="proj_ttxt">Registo Audiovisual</div>
+                        </a>
+                        <a class="proj_tbox1a" href="id_proj.html" target="_self">
+                        <div class="proj_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/11.instalacaoid.leonorcarolinalouranco.jpg)"></div>
                             <div class="proj_ttitl">ID</div>
-                            <div class="proj_ttxt">Leonor Carvalho<br>Lourenço Stewart<br>Carolina Couto</div>
-                        </div>
-                        <div class="proj_tbox1e">
-                        <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
-                            <div class="proj_ttitl">SINESTESIA</div>
-                            <div class="proj_ttxt">Catarina Serafim<br>Inês Borges<br>Guilherme Soeiro</div>
-                        </div>
-                        <div class="proj_tbox2a">
-                        <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
+                            <div class="proj_ttxt">Instalação Audiovisual</div>
+                        </a>
+                        <a class="proj_tbox1e" href="sinest_proj.html" target="_self">
+                        <div class="proj_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/12.instalacaoaudiovisual.inesserafinaguilherme.jpg)"></div>
+                            <div class="proj_ttitl">Sinestesia</div>
+                            <div class="proj_ttxt">Instalação Audiovisual</div>
+                        </a>
+                        <a class="proj_tbox2a" href="triptic_proj.html" target="_self">
+                        <div class="proj_timg2" style="background-image: url(css/img/psqv/1.comeinsideroom101/13.intala%C3%A7aoaudiovisual.mafaldapedrobeatriztiago.jpg)"></div>
                             <div class="proj_ttitl">Tríptico</div>
-                            <div class="proj_ttxt">Mafalda Mota<br>Tiago Marinho<br>Beatriz Sapata<br>Pedro Cartaxana</div>
-                        </div>
+                            <div class="proj_ttxt">Instalação Audiovisual</div>
+                        </a>
                     </div>
                 </div>
                 <div id="vt2s2" class="msprojtitl">The Dreams</div>
