--- a/suspiro_proj.html
+++ b/suspiro_proj.html
@@ -81,21 +81,22 @@
             </div>
         </div>
         <div id="sprojmain">
-            <div class="sproj_titl">Illusion within an illusion</div>
+            <div class="sproj_titl">suspiro</div>
             <div class="sproj_hold">
                 <div class="sproj_stitl">Projecto de Design de Comnicação IV</div>
                 <div class="sproj_lhold"><a class="sproj_links" href="proj.html#desti2" target="_self">vamos</a> > <a class="sproj_links" href="proj.html#vt2" target="_self">Pelo sonho é que vamos</a> > <a class="sproj_links" href="proj.html#vt2s1" target="_self">Come inside Room 101</a></div>
             </div>
             <div class="sproj_hold">
                 <div class="sproj_plhold">
-                    <a class="sproj_plinks" href="beasapata.html" target="_self">Beatriz Sapata</a>
+                    <a class="sproj_plinks" href="davsantos.html" target="_self">David Santos</a>
+                    <a class="sproj_plinks" href="kevferreira.html" target="_self">Kevin Ferreira</a>
                 </div>
                 <div class="sproj_intro">
-                    <div class="sproj_txt"><p>Uma vez dentro do quarto e na impossibilidade de sair, a personagem vê-se em confronto com os dois mundos: o mundo real e o imaginário. Embora opostos, um não existe sem o outro e vice-versa. É a ilusão real ou a realidade uma ilusão? O vídeo acompanha o primeiro contacto da personagem com o exterior, que resulta numa desordem e confusão de sentimentos que concluem a incapacidade de distinguir a realidade da ilusão.</p></div>
+                    <div class="sproj_txt"><p>Este projecto teve como referências visuais e temáticas ‘2001: Odisseia no Espaço’ de Stanley Kubrick (1968) e ‘Interstellar’ de Christopher Nolan (2014). Os conceitos de espaço e tempo serviram como âncoras para alcançar uma imagética que desafia o espectador a imaginar novas realidades. Novos espaços regidos por conceitos que transgridem as leis da física. Em simultâneo, a música de Hans Zimmer estimula uma dimensão imersiva e sobrenatural.</p><p>A experiência que se pretende alcançar é traduzível pelos versos do poeta T. S. Eliot: “É assim que acaba o mundo./ Não com um estrondo,/ mas com um suspiro.”</p></div>
                 </div>
             </div>
             <div class="slideshow-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/WmJwIHypwX8?rel=0" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/awD1WQFkpTk?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
         <div id="foot">
