--- a/triptic_proj.html
+++ b/triptic_proj.html
@@ -81,21 +81,24 @@
             </div>
         </div>
         <div id="sprojmain">
-            <div class="sproj_titl">Illusion within an illusion</div>
+            <div class="sproj_titl">Tríptico</div>
             <div class="sproj_hold">
                 <div class="sproj_stitl">Projecto de Design de Comnicação IV</div>
                 <div class="sproj_lhold"><a class="sproj_links" href="proj.html#desti2" target="_self">vamos</a> > <a class="sproj_links" href="proj.html#vt2" target="_self">Pelo sonho é que vamos</a> > <a class="sproj_links" href="proj.html#vt2s1" target="_self">Come inside Room 101</a></div>
             </div>
             <div class="sproj_hold">
                 <div class="sproj_plhold">
+                    <a class="sproj_plinks" href="mafldmota.html" target="_self">Mafalda Mota</a>
+                    <a class="sproj_plinks" href="tgmarinho.html" target="_self">Tiago Marinho</a>
                     <a class="sproj_plinks" href="beasapata.html" target="_self">Beatriz Sapata</a>
+                    <a class="sproj_plinks" href="pdrcartaxana.html" target="_self">Pedro Cartaxana</a>
                 </div>
                 <div class="sproj_intro">
-                    <div class="sproj_txt"><p>Uma vez dentro do quarto e na impossibilidade de sair, a personagem vê-se em confronto com os dois mundos: o mundo real e o imaginário. Embora opostos, um não existe sem o outro e vice-versa. É a ilusão real ou a realidade uma ilusão? O vídeo acompanha o primeiro contacto da personagem com o exterior, que resulta numa desordem e confusão de sentimentos que concluem a incapacidade de distinguir a realidade da ilusão.</p></div>
+                    <div class="sproj_txt"><p>Sustentado no pensamento de Platão, ‘Tríptico’ é uma descoberta do mundo exterior. Segundo o autor, existem dois mundos: o dos sentidos e o inteligível, onde está a verdade.</p><p>‘Tríptico’ apresenta um mundo que se desdobra em três “portas” diferentes, no qual a protagonista entra em contacto com ele através dos sentidos. Primeiro faz o reconhecimento olfativo, de seguida deita um olhar sobre o mundo exterior e, por último, tem a experiência palpável do mesmo. Estas experiências ocorrem em loop, onde tudo surge e desaparece, num ciclo vicioso. A pergunta impõe-se: será possível conhecer o mundo ignorando o que nos rodeia?</p></div>
                 </div>
             </div>
             <div class="slideshow-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/WmJwIHypwX8?rel=0" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/0WwWuLGbkWc?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
         <div id="foot">
