--- a/id_proj.html
+++ b/id_proj.html
@@ -81,21 +81,23 @@
             </div>
         </div>
         <div id="sprojmain">
-            <div class="sproj_titl">Illusion within an illusion</div>
+            <div class="sproj_titl">ID</div>
             <div class="sproj_hold">
                 <div class="sproj_stitl">Projecto de Design de Comnicação IV</div>
                 <div class="sproj_lhold"><a class="sproj_links" href="proj.html#desti2" target="_self">vamos</a> > <a class="sproj_links" href="proj.html#vt2" target="_self">Pelo sonho é que vamos</a> > <a class="sproj_links" href="proj.html#vt2s1" target="_self">Come inside Room 101</a></div>
             </div>
             <div class="sproj_hold">
                 <div class="sproj_plhold">
-                    <a class="sproj_plinks" href="beasapata.html" target="_self">Beatriz Sapata</a>
+                    <a class="sproj_plinks" href="leocarvalho.html" target="_self">Leonor Carvalho</a>
+                    <a class="sproj_plinks" href="loustewart.html" target="_self">Lourenço Stewart</a>
+                    <a class="sproj_plinks" href="carlcouto.html" target="_self">Carolina Couto</a>
                 </div>
                 <div class="sproj_intro">
-                    <div class="sproj_txt"><p>Uma vez dentro do quarto e na impossibilidade de sair, a personagem vê-se em confronto com os dois mundos: o mundo real e o imaginário. Embora opostos, um não existe sem o outro e vice-versa. É a ilusão real ou a realidade uma ilusão? O vídeo acompanha o primeiro contacto da personagem com o exterior, que resulta numa desordem e confusão de sentimentos que concluem a incapacidade de distinguir a realidade da ilusão.</p></div>
+                    <div class="sproj_txt"><p>ID mantém as identidades irreconhecíveis e indistinguíveis, ao mesmo tempo que se trata de uma introspecção: ver para dentro. Neste dentro busca-se a identidade da alma através de ressonâncias electromagnéticas, para localizar a doença que é o que nos distingue do outro, o que nos dá identidade. Uma procura infinita, em loop. ID surge como uma crítica à procura desta cura, à alienação e necessidade de se fazer parte de um todo. Para sustentar esta procura da identidade utiliza-se a teoria psicanalítica de Sigmund Freud (1856-1939), que defende que a identidade é constituída pelo Id, pelo Ego e pelo Superego.</p></div>
                 </div>
             </div>
             <div class="slideshow-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/WmJwIHypwX8?rel=0" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/G-l_Qy8DAy8?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
         <div id="foot">
