--- a/insborges.html
+++ b/insborges.html
@@ -64,11 +64,11 @@
                             <div class="profl_ttitl">No more Miss America</div>
                             <div class="profl_ttxt">Publicação Periódica</div>
                         </a>
-                        <div class="profl_tbox1a">
-                        <div class="profl_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
+                        <a class="profl_tbox1a" href="sinest_proj.html" target="_self">
+                        <div class="profl_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/12.instalacaoaudiovisual.inesserafinaguilherme.jpg)"></div>
+                            <div class="profl_ttitl">Sinestesia</div>
+                            <div class="profl_ttxt">Instalação Audiovisual</div>
+                        </a>
                     </div>
                     <div class="profl_tfence1">
                         <div class="profl_tbox2b">
