--- a/leocarvalho.html
+++ b/leocarvalho.html
@@ -83,11 +83,11 @@
                         </a>
                     </div>
                     <div class="profl_tfence1">
-                        <div class="profl_tbox2c">
-                        <div class="profl_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
+                        <a class="profl_tbox2c" href="id_proj.html" target="_self">
+                        <div class="profl_timg2" style="background-image: url(css/img/psqv/1.comeinsideroom101/11.instalacaoid.leonorcarolinalouranco.jpg)"></div>
+                            <div class="profl_ttitl">ID</div>
+                            <div class="profl_ttxt">Instalação Audiovisual</div>
+                        </a>
                     </div>
                 </div>
         </div>
