--- a/lipotimia_proj.html
+++ b/lipotimia_proj.html
@@ -25,6 +25,10 @@
 	width: 100%;
 	height: 100%;
 }
+            .sproj_intro{
+    column-count: 1;
+    -webkit-column-count: 1;
+}
             @media only screen and (max-height: 420px){
                 .slideshow-container {
 	padding-bottom: 50%;
