--- a/pdrcartaxana.html
+++ b/pdrcartaxana.html
@@ -4,37 +4,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/home.css">
-        <link rel="stylesheet" href="css/sprojs.css">
-        <title>sem destino a</title>
+        <link rel="stylesheet" href="css/profl.css">
+        <title>sem destino a - agenda</title>
         <link rel="icon" href="css/img/sda_icon.png" type="image/x-icon">
-        <style>
-            .slideshow-container {
-                display: table;
-	position: relative;
-	padding-bottom: 56.25%;
-	padding-top: 25px;
-	height: 0;
-                overflow: hidden;
-}
-.slideshow-container iframe {
-    display: flex;
-    display: -webkit-flex;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
-            .sproj_intro{
-    column-count: 1;
-    -webkit-column-count: 1;
-}
-            @media only screen and (max-height: 420px){
-                .slideshow-container {
-	padding-bottom: 50%;
-}
-            }
-        </style>
     </head>
     <body>
         <script>
@@ -80,23 +52,44 @@
                 </div>
             </div>
         </div>
-        <div id="sprojmain">
-            <div class="sproj_titl">Illusion within an illusion</div>
-            <div class="sproj_hold">
-                <div class="sproj_stitl">Projecto de Design de Comnicação IV</div>
-                <div class="sproj_lhold"><a class="sproj_links" href="proj.html#desti2" target="_self">vamos</a> > <a class="sproj_links" href="proj.html#vt2" target="_self">Pelo sonho é que vamos</a> > <a class="sproj_links" href="proj.html#vt2s1" target="_self">Come inside Room 101</a></div>
+        <div id="proflmain">
+            <div class="profl_sec">
+                <div class="profl_titl">Pedro Cartaxana</div>
+                <div class="profl_links"><a class="profl_link" href="mailto:pmcartaxana@hotmail.com" target="_blank">pmcartaxana@hotmail.com</a><br><a class="profl_link" href="#" onclick='window.open("https://www.behance.net/pmcartaxan0f2f");return false;'>behance.net/pmcartaxan0f2f</a></div>
             </div>
-            <div class="sproj_hold">
-                <div class="sproj_plhold">
-                    <a class="sproj_plinks" href="beasapata.html" target="_self">Beatriz Sapata</a>
+            <div class="profl_tplaygrnd1">
+                    <div class="profl_tfence1">
+                        <a class="profl_tbox1a" href="triptic_proj.html" target="_self">
+                        <div class="profl_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/13.intala%C3%A7aoaudiovisual.mafaldapedrobeatriztiago.jpg)"></div>
+                            <div class="profl_ttitl">Tríptico</div>
+                            <div class="profl_ttxt">Instalação Audiovisual</div>
+                        </a>
+                        <div class="profl_tbox1a">
+                        <div class="profl_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
+                            <div class="profl_ttitl">nome do projecto</div>
+                            <div class="profl_ttxt">legenda</div>
+                        </div>
+                    </div>
+                    <div class="profl_tfence1">
+                        <div class="profl_tbox2b">
+                        <div class="profl_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
+                            <div class="profl_ttitl">nome do projecto</div>
+                            <div class="profl_ttxt">legenda</div>
+                        </div>
+                        <div class="profl_tbox1b">
+                        <div class="profl_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
+                            <div class="profl_ttitl">nome do projecto</div>
+                            <div class="profl_ttxt">legenda</div>
+                        </div>
+                    </div>
+                    <div class="profl_tfence1">
+                        <div class="profl_tbox2c">
+                        <div class="profl_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
+                            <div class="profl_ttitl">nome do projecto</div>
+                            <div class="profl_ttxt">legenda</div>
+                        </div>
+                    </div>
                 </div>
-                <div class="sproj_intro">
-                    <div class="sproj_txt"><p>Uma vez dentro do quarto e na impossibilidade de sair, a personagem vê-se em confronto com os dois mundos: o mundo real e o imaginário. Embora opostos, um não existe sem o outro e vice-versa. É a ilusão real ou a realidade uma ilusão? O vídeo acompanha o primeiro contacto da personagem com o exterior, que resulta numa desordem e confusão de sentimentos que concluem a incapacidade de distinguir a realidade da ilusão.</p></div>
-                </div>
-            </div>
-            <div class="slideshow-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/WmJwIHypwX8?rel=0" frameborder="0" allowfullscreen></iframe>
-            </div>
         </div>
         <div id="foot">
             <div id="footword">
