--- a/pmental_proj.html
+++ b/pmental_proj.html
@@ -81,21 +81,21 @@
             </div>
         </div>
         <div id="sprojmain">
-            <div class="sproj_titl">Illusion within an illusion</div>
+            <div class="sproj_titl">Palácio Mental</div>
             <div class="sproj_hold">
                 <div class="sproj_stitl">Projecto de Design de Comnicação IV</div>
                 <div class="sproj_lhold"><a class="sproj_links" href="proj.html#desti2" target="_self">vamos</a> > <a class="sproj_links" href="proj.html#vt2" target="_self">Pelo sonho é que vamos</a> > <a class="sproj_links" href="proj.html#vt2s1" target="_self">Come inside Room 101</a></div>
             </div>
             <div class="sproj_hold">
                 <div class="sproj_plhold">
-                    <a class="sproj_plinks" href="beasapata.html" target="_self">Beatriz Sapata</a>
+                    <a class="sproj_plinks" href="margsilva.html" target="_self">Margarida Gomes da Silva</a>
                 </div>
                 <div class="sproj_intro">
-                    <div class="sproj_txt"><p>Uma vez dentro do quarto e na impossibilidade de sair, a personagem vê-se em confronto com os dois mundos: o mundo real e o imaginário. Embora opostos, um não existe sem o outro e vice-versa. É a ilusão real ou a realidade uma ilusão? O vídeo acompanha o primeiro contacto da personagem com o exterior, que resulta numa desordem e confusão de sentimentos que concluem a incapacidade de distinguir a realidade da ilusão.</p></div>
+                    <div class="sproj_txt"><p>Um lugar que não é um lugar. Um lugar construído mentalmente. Um refúgio. Inspiração, expiração. Meditação. Controlo e calma, sob qualquer circunstância. Visualização. Anulação do corpo. Esquecimento do físico. Total presença mental. Palácio Mental.</p></div>
                 </div>
             </div>
             <div class="slideshow-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/WmJwIHypwX8?rel=0" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/rzqQH5EiyXE?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
         <div id="foot">
