--- a/sinest_proj.html
+++ b/sinest_proj.html
@@ -81,21 +81,23 @@
             </div>
         </div>
         <div id="sprojmain">
-            <div class="sproj_titl">Illusion within an illusion</div>
+            <div class="sproj_titl">Sinestesia</div>
             <div class="sproj_hold">
                 <div class="sproj_stitl">Projecto de Design de Comnicação IV</div>
                 <div class="sproj_lhold"><a class="sproj_links" href="proj.html#desti2" target="_self">vamos</a> > <a class="sproj_links" href="proj.html#vt2" target="_self">Pelo sonho é que vamos</a> > <a class="sproj_links" href="proj.html#vt2s1" target="_self">Come inside Room 101</a></div>
             </div>
             <div class="sproj_hold">
                 <div class="sproj_plhold">
-                    <a class="sproj_plinks" href="beasapata.html" target="_self">Beatriz Sapata</a>
+                    <a class="sproj_plinks" href="catserafim.html" target="_self">Catarina Serafim</a>
+                    <a class="sproj_plinks" href="insborges.html" target="_self">Inês Pedro Borges</a>
+                    <a class="sproj_plinks" href="guisoeiro.html" target="_self">Guilherme Soeiro</a>
                 </div>
                 <div class="sproj_intro">
-                    <div class="sproj_txt"><p>Uma vez dentro do quarto e na impossibilidade de sair, a personagem vê-se em confronto com os dois mundos: o mundo real e o imaginário. Embora opostos, um não existe sem o outro e vice-versa. É a ilusão real ou a realidade uma ilusão? O vídeo acompanha o primeiro contacto da personagem com o exterior, que resulta numa desordem e confusão de sentimentos que concluem a incapacidade de distinguir a realidade da ilusão.</p></div>
+                    <div class="sproj_txt"><p>SINESTESIA é uma vídeo-instalação onde o observador sente uma música serial composta por 4 notas através da sua representação gráfica de 4 formas e 4 faíscas, enquanto estas se movimentam por dois ecrãs (que representam o olho esquerdo e o olho direito do observador) consoante a posição do áudio. O observador deve-se colocar no meio dos dois ecrãs e fixar o seu olhar no centro dos mesmos para ter uma melhor experiência da instalação.</p></div>
                 </div>
             </div>
             <div class="slideshow-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/WmJwIHypwX8?rel=0" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/GWSKfEng4iw?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
         <div id="foot">
